@@ -12,6 +12,14 @@ bzr development head
       mention revisions that are not present.
 
 
+  LIBRARY:
+
+    * Changed trace messages to go through the standard logging
+      framework, so that they can more easily be redirected by
+      libraries.
+
+
+
 bzr-0.0.6 2005-08-18
 
   NEW FEATURES:
